--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -182,6 +182,12 @@
 			</div>  <!-- end of desktop main container -->
 
 
+
+
+
+<!-- <=================================================================================================================================================================================
+MOBILE VIEW ====================================================================================================================================================================================> -->
+
      <!-- beginning of main mobile view container -->
      <section class="mobile-main">
  				<section class="panel">
@@ -212,96 +218,105 @@
  					</header>
  					<hr class="-mt-4">
 
+
  				<section class="text-primary bg-secondary overflow-display">
  				  <div class="container px-5 py-24 mx-auto bg-secondary overflow-display">
- 						<h1 class="text-left tracking-wider p-4 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold -mt-10 uppercase">VINCI Blogs</h1>
- 						<hr class="w-1/2 ml-4 -mt-4">
+ 						<h1 class="text-left tracking-wider text-4xl font-sans font-semibold -mt-10 uppercase ml-4">VINCI Blogs</h1>
+ 						<hr class="w-3/4 ml-4 -mt-4">
  						<h4 class="tracking-widest text-left p-4">Learn more about XR and its applications</h4>
  				    <div class="flex flex-wrap -m-4">
  							<!-- blog1 -->
- 				      <div class="p-4 md:w-1/3">
- 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
- 				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://images.unsplash.com/photo-1592478411213-6153e4ebc07d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1300&q=80" alt="blog">
- 				          <div class="p-6">
- 				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">How VR is Saving Companies Millions</h1>
- 										<p class="leading-relaxed mb-3 text-gray-500">How a new age of education technology is having a major impact on training procedures.</p>
- 				            <div class="flex items-center flex-wrap ">
- 				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-VR-Saving-Millions">Learn More
- 				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
- 				                  <path d="M5 12h14"></path>
- 				                  <path d="M12 5l7 7-7 7"></path>
- 				                </svg>
- 				              </a>
- 				            </div>
- 										<h6 class="">By Dawson Goepferich</h6>
- 										<h6 class="">8min read</h6>
- 				          </div>
- 				        </div>
- 				      </div>
+								<div class="p-4 md:w-1/3 text-primary">
+	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://images.unsplash.com/photo-1592478411213-6153e4ebc07d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1300&q=80" alt="blog">
+	 				          <div class="p-6">
+	 				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">How VR is Saving Companies Millions</h1>
+	 										<p class="leading-relaxed mb-3 text-gray-500">How a new age of education technology is having a major impact on training procedures.</p>
+	 				            <div class="flex items-center flex-wrap ">
+	 				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-VR-Saving-Millions">Learn More
+	 				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+	 				                  <path d="M5 12h14"></path>
+	 				                  <path d="M12 5l7 7-7 7"></path>
+	 				                </svg>
+	 				              </a>
+	 				            </div>
+	 										<h6 class="">By Dawson Goepferich</h6>
+	 										<h6 class="">8min read</h6>
+	 				          </div>
+	 				        </div>
+	 				      </div>
+							</section>
+						</section>
  							<!-- blog2 -->
- 							<div class="p-4 md:w-1/3">
- 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
- 				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/flagged/photo-1556470234-36a5389f905a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="blog">
- 				          <div class="p-6">
- 				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">How VR is Changing Corporate Training</h1>
- 				            <p class="leading-relaxed mb-3 text-gray-500">VR is bringing powerful and progressive changes to how training is being done in the workplace.</p>
- 				            <div class="flex items-center flex-wrap ">
- 				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-VR-Training-Cases">Learn More
- 				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
- 				                  <path d="M5 12h14"></path>
- 				                  <path d="M12 5l7 7-7 7"></path>
- 				                </svg>
- 				              </a>
- 				            </div>
- 										<h6 class="">By Ray Lam</h6>
- 										<h6 class="">5min read</h6>
- 				          </div>
- 				        </div>
- 				      </div>
+ 							<div class="panel">
+								<div class="p-4 md:w-1/3 text-primary">
+	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/flagged/photo-1556470234-36a5389f905a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="blog">
+	 				          <div class="p-6">
+	 				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">How VR is Changing Corporate Training</h1>
+	 				            <p class="leading-relaxed mb-3 text-gray-500">VR is bringing powerful and progressive changes to how training is being done in the workplace.</p>
+	 				            <div class="flex items-center flex-wrap ">
+	 				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-VR-Training-Cases">Learn More
+	 				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+	 				                  <path d="M5 12h14"></path>
+	 				                  <path d="M12 5l7 7-7 7"></path>
+	 				                </svg>
+	 				              </a>
+	 				            </div>
+	 										<h6 class="">By Ray Lam</h6>
+	 										<h6 class="">5min read</h6>
+	 				          </div>
+	 				        </div>
+	 				      </div>
+ 							</div>
  							<!-- blog3 -->
- 							<div class="p-4 md:w-1/3">
- 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
- 				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/photo-1459550146610-232100af5511?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1094&q=80" alt="blog">
- 				          <div class="p-6">
- 				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">Types and Applications of Different XR Tech</h1>
- 				            <p class="leading-relaxed mb-3 text-gray-500">XR, or extended tech, will transform how humans interact with the physical and digtal world.</p>
- 				            <div class="flex items-center flex-wrap ">
- 				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-Applications-XR">Learn More
- 				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
- 				                  <path d="M5 12h14"></path>
- 				                  <path d="M12 5l7 7-7 7"></path>
- 				                </svg>
- 				              </a>
- 				            </div>
- 										<h6 class="">By Ray Lam</h6>
- 										<h6 class="">5min read</h6>
- 				          </div>
- 				        </div>
- 				      </div>
+ 							<div class="panel">
+								<div class="p-4 md:w-1/3 text-primary">
+	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/photo-1459550146610-232100af5511?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1094&q=80" alt="blog">
+	 				          <div class="p-6">
+	 				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">Types and Applications of Different XR Tech</h1>
+	 				            <p class="leading-relaxed mb-3 text-gray-500">XR, or extended tech, will transform how humans interact with the physical and digtal world.</p>
+	 				            <div class="flex items-center flex-wrap ">
+	 				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-Applications-XR">Learn More
+	 				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+	 				                  <path d="M5 12h14"></path>
+	 				                  <path d="M12 5l7 7-7 7"></path>
+	 				                </svg>
+	 				              </a>
+	 				            </div>
+	 										<h6 class="">By Ray Lam</h6>
+	 										<h6 class="">5min read</h6>
+	 				          </div>
+	 				        </div>
+	 				      </div>
+ 							</div>
  							<!-- blog4 -->
- 							<!-- <div class="p-4 md:w-1/3 mb-32">
- 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-display">
- 				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="../public/img/af-training.png" alt="blog">
- 				          <div class="p-6">
- 				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">Case Study: Aircraft Maintenance VR</h1>
- 				            <p class="leading-relaxed mb-3 text-gray-500">How VINCI is redefining training in the United States Air Force.</p>
- 				            <div class="flex items-center flex-wrap ">
- 				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/case-studies-USAF">Learn More
- 				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
- 				                  <path d="M5 12h14"></path>
- 				                  <path d="M12 5l7 7-7 7"></path>
- 				                </svg>
- 				              </a>
- 				            </div>
- 										<h6 class="">By Eagle Wu</h6>
- 										<h6 class="">5min read</h6>
- 				          </div>
- 				        </div>
- 				      </div> -->
+ 							<div class="panel">
+								<div class="p-4 md:w-1/3 mb-32 text-primary">
+	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-display">
+	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="../public/img/af-training.png" alt="blog">
+	 				          <div class="p-6">
+	 				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">Case Study: Aircraft Maintenance VR</h1>
+	 				            <p class="leading-relaxed mb-3 text-gray-500">How VINCI is redefining training in the United States Air Force.</p>
+	 				            <div class="flex items-center flex-wrap ">
+	 				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/case-studies-USAF">Learn More
+	 				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+	 				                  <path d="M5 12h14"></path>
+	 				                  <path d="M12 5l7 7-7 7"></path>
+	 				                </svg>
+	 				              </a>
+	 				            </div>
+	 										<h6 class="">By Eagle Wu</h6>
+	 										<h6 class="">5min read</h6>
+	 				          </div>
+	 				        </div>
+	 				      </div>
+ 							</div>
+
  				    </div>
  				  </div>
- 				</section>
- 			</section>
+
 
 
 			<section class="panel">
