--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -188,14 +188,130 @@
 <!-- <=================================================================================================================================================================================
 MOBILE VIEW ====================================================================================================================================================================================> -->
 
+
+
+
+
+
+
+
+
      <!-- beginning of main mobile view container -->
      <section class="mobile-main">
+			 <!--==================
+				NAV SECTION
+			 ==================-->
+			 <section class="mobile-nav-test bg-red-100 z-10">
+				 <nav id="hamnav">
+						 <!-- [THE HAMBURGER] -->
+						 <a href="/" class="mt-2 z-10">
+							 <img class="w-1/3 p-4" src="../public/img/vinci-logo.png" alt="">
+						 </a>
+						 <label for="hamburger">&#9776;</label>
+						 <input type="checkbox" id="hamburger"/>
+
+						 <!-- [MENU ITEMS] -->
+						 <div id="hamitems">
+							 <br>
+							 <!-- <br>
+							 <br> -->
+							 <a href="/">Home</a>
+							 <a href="/about">About</a>
+							 <a href="/services">Solutions</a>
+							 <a href="/partners">Partners</a>
+							 <a href="/careers">Careers</a>
+							 <a href="/blogs">Blogs</a>
+							 <a href="/contact">Contact</a>
+						 </div>
+					 </nav>
+
+					 <style media="screen">
+					 /* [ON SMALL SCREENS] */
+					 @media screen and (max-width: 640px){
+					 /* [ON BIG SCREEN] */
+						 /* Wrapper */
+						 #hamnav {
+						 width: 100%;
+						 background: #191919;
+						 /* Optional */
+						 position: fixed;
+						 top: 0;
+						 right: 0;
+						 z-index: 100 !important;
+
+						 }
+
+						 label {
+							 position: absolute;
+							 top: 0;
+							 right: 0;
+						 }
+
+						 /* Hide Hamburger */
+						 #hamnav label, #hamburger { display: none; }
+
+						 /* Horizontal Menu Items */
+						 #hamitems { display: flex; }
+						 #hamitems a {
+						 width: 20%; /* 100% / 5 tabs = 20% */
+						 padding: 10px;
+						 color: white;
+						 text-decoration: none;
+						 text-align: center;
+						 }
+						 #hamitems a:hover {
+						 background: #401408;
+						 }
+
+
+						 /* Show Hamburger Icon */
+						 #hamnav label {
+							 display: inline-block;
+							 color: white;
+							 background: #811;
+							 font-style: normal;
+							 padding: 10px;
+							 font-size: 1.45rem;
+							 width:3.0rem;
+						 }
+
+						 /* Break down menu items into vertical */
+						 #hamitems a {
+							 box-sizing: border-box;
+							 display: block;
+							 width: 100%;
+							 border-top: 1px solid #333;
+						 }
+
+						 #hamitems a:last-child {
+							border-bottom: 1px solid #333;
+						 }
+
+						 /* Toggle Show/Hide Menu */
+						 #hamitems { display: none; }
+						 #hamnav input:checked ~ #hamitems { display: block; }
+
+
+						 /* [DOES NOT MATTER] */
+						 html, body {
+						 padding: 0;
+						 margin: 0;
+						 font-family: arial, sans-serif;
+						 }
+					 }
+					 </style>
+			 </section>
  				<section class="panel">
+
+
+
+
+
  					<!--==================
  					 NAV SECTION
  					==================-->
 
- 					<style media="screen">
+ 					<!-- <style media="screen">
  			      h1, h2, h3, h4, h5, h6 {
  			        font-family: "Montserrat", sans-serif !important;
  			      }
@@ -216,7 +332,7 @@ MOBILE VIEW ====================================================================
  								</nav>
  							</div>
  					</header>
- 					<hr class="-mt-4">
+ 					<hr class="-mt-4"> -->
 
 
  				<section class="text-primary bg-secondary overflow-display">
