--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -451,27 +451,108 @@
     ==============================================================================================================================-->
 
       <section class="mobile-main">
-        <section class="hero-section panel text-center h-screen w-full">
-          <!--==================
-           NAV SECTION
-          ==================-->
+        <section class="mobile-nav-test bg-red-100 z-10">
+          <nav id="hamnav">
+              <!-- [THE HAMBURGER] -->
+              <a href="/" class="mt-2 z-10">
+                <img class="w-1/3 p-4" src="../public/img/vinci-logo.png" alt="">
+              </a>
+              <label for="hamburger">&#9776;</label>
+              <input type="checkbox" id="hamburger"/>
 
-          <header class="text-gray-700 body-font">
-              <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
-                <a href="/" class="flex items-center mb-4 md:mb-0  z-10">
-                  <img class="w-1/4 -mt-2" src="../public/img/vinci-logo.png" alt="">
-                </a>
-                <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
-                  <a href="/about" class="mr-5 hover:text-gray-900">About</a>
-                  <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
-                  <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
-                  <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
-                  <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
-                  <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
-                </nav>
+              <!-- [MENU ITEMS] -->
+              <div id="hamitems">
+                <br>
+                <!-- <br>
+                <br> -->
+                <a href="/">Home</a>
+                <a href="/about">About</a>
+                <a href="/services">Solutions</a>
+                <a href="/partners">Partners</a>
+                <a href="/careers">Careers</a>
+                <a href="/blogs">Blogs</a>
+                <a href="/contact">Contact</a>
               </div>
-          </header>
-          <hr class="-mt-4">
+            </nav>
+
+            <style media="screen">
+            /* [ON SMALL SCREENS] */
+            @media screen and (max-width: 640px){
+            /* [ON BIG SCREEN] */
+              /* Wrapper */
+              #hamnav {
+              width: 100%;
+              background: #191919;
+              /* Optional */
+              position: fixed;
+              top: 0;
+              right: 0;
+              z-index: 100 !important;
+
+              }
+
+              label {
+                position: absolute;
+                top: 0;
+                right: 0;
+              }
+
+              /* Hide Hamburger */
+              #hamnav label, #hamburger { display: none; }
+
+              /* Horizontal Menu Items */
+              #hamitems { display: flex; }
+              #hamitems a {
+              width: 20%; /* 100% / 5 tabs = 20% */
+              padding: 10px;
+              color: white;
+              text-decoration: none;
+              text-align: center;
+              }
+              #hamitems a:hover {
+              background: #401408;
+              }
+
+
+              /* Show Hamburger Icon */
+              #hamnav label {
+                display: inline-block;
+                color: white;
+                background: #811;
+                font-style: normal;
+                padding: 10px;
+                font-size: 1.45rem;
+                width:3.0rem;
+              }
+
+              /* Break down menu items into vertical */
+              #hamitems a {
+                box-sizing: border-box;
+                display: block;
+                width: 100%;
+                border-top: 1px solid #333;
+              }
+
+              #hamitems a:last-child {
+               border-bottom: 1px solid #333;
+              }
+
+              /* Toggle Show/Hide Menu */
+              #hamitems { display: none; }
+              #hamnav input:checked ~ #hamitems { display: block; }
+
+
+              /* [DOES NOT MATTER] */
+              html, body {
+              padding: 0;
+              margin: 0;
+              font-family: arial, sans-serif;
+              }
+            }
+            </style>
+        </section>
+
+        <section class="hero-section panel text-center h-screen w-full">
 
       <!--==================
        HERO SECTION
