--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -198,21 +198,113 @@
        ===================================================== beginning of main mobile view container ======================================================================
      -=======================================================================================================================================================================  -->
        <section class="mobile-main">
+         <!--==================
+          NAV SECTION
+         ==================-->
+         <section class="mobile-nav-test bg-red-100 z-10">
+           <nav id="hamnav">
+               <!-- [THE HAMBURGER] -->
+               <a href="/" class="mt-2 z-10">
+                 <img class="w-1/3 p-4" src="../public/img/vinci-logo.png" alt="">
+               </a>
+               <label for="hamburger">&#9776;</label>
+               <input type="checkbox" id="hamburger"/>
+
+               <!-- [MENU ITEMS] -->
+               <div id="hamitems">
+                 <br>
+                 <!-- <br>
+                 <br> -->
+                 <a href="/">Home</a>
+                 <a href="/about">About</a>
+                 <a href="/services">Solutions</a>
+                 <a href="/partners">Partners</a>
+                 <a href="/careers">Careers</a>
+                 <a href="/blogs">Blogs</a>
+                 <a href="/contact">Contact</a>
+               </div>
+             </nav>
+
+             <style media="screen">
+             /* [ON SMALL SCREENS] */
+             @media screen and (max-width: 640px){
+             /* [ON BIG SCREEN] */
+               /* Wrapper */
+               #hamnav {
+               width: 100%;
+               background: #191919;
+               /* Optional */
+               position: fixed;
+               top: 0;
+               right: 0;
+               z-index: 100 !important;
+
+               }
+
+               label {
+                 position: absolute;
+                 top: 0;
+                 right: 0;
+               }
+
+               /* Hide Hamburger */
+               #hamnav label, #hamburger { display: none; }
+
+               /* Horizontal Menu Items */
+               #hamitems { display: flex; }
+               #hamitems a {
+               width: 20%; /* 100% / 5 tabs = 20% */
+               padding: 10px;
+               color: white;
+               text-decoration: none;
+               text-align: center;
+               }
+               #hamitems a:hover {
+               background: #401408;
+               }
+
+
+               /* Show Hamburger Icon */
+               #hamnav label {
+                 display: inline-block;
+                 color: white;
+                 background: #811;
+                 font-style: normal;
+                 padding: 10px;
+                 font-size: 1.45rem;
+                 width:3.0rem;
+               }
+
+               /* Break down menu items into vertical */
+               #hamitems a {
+                 box-sizing: border-box;
+                 display: block;
+                 width: 100%;
+                 border-top: 1px solid #333;
+               }
+
+               #hamitems a:last-child {
+                border-bottom: 1px solid #333;
+               }
+
+               /* Toggle Show/Hide Menu */
+               #hamitems { display: none; }
+               #hamnav input:checked ~ #hamitems { display: block; }
+
+
+               /* [DOES NOT MATTER] */
+               html, body {
+               padding: 0;
+               margin: 0;
+               font-family: arial, sans-serif;
+               }
+             }
+             </style>
+         </section>
+
          <section id="cover" class="hero-section text-primary panel background cover overflow-hidden">
            <header class="text-gray-700 body-font ">
-               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-                 <a href="/" class="flex items-center mb-4 md:mb-0">
-                   <img class="w-1/4 -mt-2" src="../public/img/vinci-logo.png" alt="">
-                 </a>
-                 <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
-                   <a href="/about" class="mr-5 hover:text-gray-900">About</a>
-                   <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
-                   <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
-                   <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
-                   <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
-                   <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
-                 </nav>
-               </div>
+
            </header>
            <hr class="-mt-4">
              <h1 class="text-left tracking-wider p-4 mt-56 -mb-4 text-3xl font-sans font-semibold uppercase">Partners</h1>
@@ -225,7 +317,7 @@
           <!-- - - - - - - - - Airforce ---------------->
           <section class="mb-4 panel background first">
              <section class="text-primary body-font">
-               <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Air Craft Maintenance</h1>
+               <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-16 -mb-16 font-sans">Air Craft Maintenance</h1>
                <section class="text-gray-700 body-font">
                   <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
@@ -256,7 +348,7 @@
           <!-- - - - - - - - - WIND TURBINES ---------------->
           <section class="mb-4 panel background second">
              <section class="text-primary body-font">
-               <h1 class="text-primary text-center mx-auto font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Wind Turbines</h1>
+               <h1 class="text-primary text-center mx-auto font-semibold sm:text-4xl text-3xl mt-16 -mb-16 font-sans">Wind Turbines</h1>
                <section class="text-gray-700 body-font">
                   <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
@@ -284,7 +376,7 @@
           <!-- - - - - - - - - Soldier Training ---------------->
            <section class="mb-4 panel background third">
              <section class="text-primary body-font">
-               <h1 class="text-primary text-center mx-auto font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
+               <h1 class="text-primary text-center mx-auto font-semibold sm:text-4xl text-3xl mt-16 -mb-16 font-sans">Soldier Training</h1>
                <section class="text-gray-700 body-font">
                   <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
@@ -314,7 +406,7 @@
           <!-- - - - - - - - - SafetyDNA VR ---------------->
             <section class="mb-4 panel background fourth">
               <section class="text-primary body-font">
-                <h1 class="text-primary font-semibold text-center mx-auto sm:text-4xl text-3xl mt-10 -mb-16 font-sans">SafetyDNA VR</h1>
+                <h1 class="text-primary font-semibold text-center mx-auto sm:text-4xl text-3xl mt-16 -mb-16 font-sans">SafetyDNA VR</h1>
                 <section class="text-gray-700 body-font">
                    <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
